@@ -1,3 +1,8 @@
+12/06/2019:
+	- Update to OpenJPEG code to fix problem when re-using codec structures
+	  more than once in the same request (for example when calculating histogram).
+
+
 11/06/2019:
 	- Fixes to eliminate Coverity static scan analysis warnings.
 	- New rewritten OpenJPEG module: now faster, cleaner and correctly
